# plugin.SofaPython3.deprecated

./: .gitignore  CMakeLists.txt  README.md  runFromPython.py
Plugin/src/SofaPython3/: PythonEnvironment.h  PythonFactory.cpp  SceneLoaderPY3.cpp  SceneLoaderPY3.h
bindings/: CMakeLists.txt
bindings/Sofa/: CMakeLists.txt
bindings/Sofa/package/: __init__.py
bindings/Sofa/src/SofaPython3/Sofa/Components/: Submodule_Components.cpp
bindings/Sofa/src/SofaPython3/Sofa/Core/: Binding_Base.cpp  Binding_Base.h  Binding_BaseData.cpp  Binding_BaseData_doc.h  Binding_BaseObject.cpp  Binding_BaseObject_doc.h  Binding_Base_doc.h  Binding_Controller.cpp  Binding_Controller.h  Binding_DataContainer.cpp  Binding_DataEngine.cpp  Binding_DataEngine.h  Binding_ForceField.cpp  Binding_ForceField.h  Binding_Node.cpp  Binding_Node_doc.h  Binding_Prefab.cpp  Binding_Prefab.h  Binding_Simulation.cpp  Binding_Visitor.cpp  Binding_Visitor.h  Binding_VisualParams.cpp  Binding_VisualParams.h  Submodule_Core.cpp  binding_datacontainer_doc.h
bindings/Sofa/src/SofaPython3/Sofa/Core/Data/: Binding_DataContainer.cpp  Binding_DataContainer_doc.h  Binding_DataString.cpp
bindings/Sofa/src/SofaPython3/Sofa/Simulation/: Binding_Simulation.cpp  Submodule_Simulation.cpp
bindings/Sofa/src/SofaPython3/Sofa/Types/: Binding_BoundingBox.h  Submodule_Types.cpp
bindings/Sofa/tests/: CMakeLists.txt
bindings/Sofa/tests/Core/: Base.py  BaseData.py  BaseLink.py  ForceField.py  MyRestShapeForceField.py  Visitor.py  testForceField.py3
bindings/SofaExporter/tests/: CMakeLists.txt
bindings/SofaGui/src/SofaPython3/SofaGui/: Module_SofaGui.cpp
bindings/SofaRuntime/: CMakeLists.txt
bindings/SofaRuntime/src/SofaPython3/SofaRuntime/: Module_SofaRuntime.cpp
bindings/SofaRuntime/tests/: CMakeLists.txt
bindings/SofaTypes/tests/: CMakeLists.txt
doc/: mkdoc.py  mkdoc.sh
doc/generated_doc/: Node_doc.h  Simulation_doc.h
examples/: ControllerScene.py  multithreadingExample.py  selfContainedMechanicalScene.py
examples/CatheterExamples/: FlatLCA.py
splib/: __init__.py
src/SofaPython3/: DataHelper.cpp  DataHelper.h  DataPyObject.cpp  DataPyObject.h  Prefab.cpp  Prefab.h  PythonEnvironment.cpp  PythonEnvironment.h  PythonFactory.cpp  PythonFactory.h  SceneLoaderPY3.cpp  initModule.cpp
